@startuml

title __VERERBUNG's Class Diagram__\n

  namespace giro {
    class giro.GiroKonto {
    }
  }
  

  namespace konto {
    class konto.Konto {
    }
  }
  

  namespace main {
    class main.Main {
    }
  }
  

  namespace sparbuch {
    class sparbuch.Sparbuch {
    }
  }
  

  giro.GiroKonto -up-|> konto.Konto
  sparbuch.Sparbuch -up-|> konto.Konto


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
